fixed floating paragraph, added "signature"

--- a/about.html
+++ b/about.html
@@ -4,20 +4,22 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Brainy Bites</title>
+	<meta name="description" content="Brainy Bites is a knowledge testing platform that offers quizzes on a variety of topics including geography, music, literature, and more. Test your knowledge now!">
+	<title>About us!</title>
 	<link rel="stylesheet" href="style.css">
+	<link rel="icon" type="image/x-icon" href="/files/favicon.ico">
 	<link rel="stylesheet" href="about.css">
 </head>
 <body>
 	<div id="container">
 		<div id="header">
-			<img src="files/brainy-bites.png" alt="Brainy Bites"/>
+			<a href='index.html'><img src="files/brainy-bites.png" alt="Brainy Bites" /></a>
 		</div>
 		<div id="nav">
-			<div class="nav-btn"><a href="index.html">HOME</a></div>
-			<div class="nav-btn">RANDOM QUIZ</div>
-			<div class="nav-btn"><a href="about.html">ABOUT</a></div>
-			<div class="nav-btn"><a href="contact.html">CONTACT</a></div>
+			<a href="index.html"><div id="homeBtn" class="nav-btn">HOME</div></a>
+			<a><div id="randomQuizBtn" class="nav-btn">RANDOM QUIZ</div></a>
+			<a href="about.html"><div class="nav-btn">ABOUT</div></a>
+			<a href="contact.html"><div class="nav-btn">CONTACT</div></a>
 		</div>
 		<div id="main">
 			<section>
@@ -38,15 +40,16 @@
 				<h2>What sets this website apart?</h2>
 				<p>This website offers a wide variety of categories to choose from, including history, science, literature, and more. The questions are carefully curated to be challenging yet educational, and the website is designed to be user-friendly and easy to navigate. Additionally, the website is constantly updated with new questions and categories to keep the experience fresh and engaging for users.</p>
 			</section>
-			<section>
+			<section id="thanks">
 				<br>
 				<h2>Thank you for visiting</h2>
 				<p>Thank you for visiting my website and giving it a try. I hope you had a fun and educational experience, and I look forward to providing you with more trivia challenges in the future.</p>
+				<p id="signature">NamelessDev</p>
 			</section>
 		</div>
 		
 		<div id="footer">
-			some footer
+			All rights reserved
 		</div>
 	</div>
 </body>
