--- a/index.html
+++ b/index.html
@@ -4,20 +4,22 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta name="description" content="Brainy Bites is a knowledge testing platform that offers quizzes on a variety of topics including geography, music, literature, and more. Test your knowledge now!">
 		<title>Brainy Bites</title>
 		<link rel="stylesheet" href="style.css" />
+		<link rel="icon" type="image/x-icon" href="/files/favicon.ico">
     <script src="script.js"></script>
 	</head>
 	<body>
 		<div id="container">
 			<div id="header">
-				<img src="files/brainy-bites.png" alt="Brainy Bites" />
+				<a href='index.html'><img src="files/brainy-bites.png" alt="Brainy Bites" /></a>
 			</div>
 			<div id="nav">
-				<div id="homeBtn" class="nav-btn"><a href="index.html">HOME</a></div>
-				<div id="randomQuizBtn" class="nav-btn">RANDOM QUIZ</div>
-				<div class="nav-btn"><a href="about.html">ABOUT</a></div>
-				<div class="nav-btn"><a href="contact.html">CONTACT</a></div>
+				<a href="index.html"><div id="homeBtn" class="nav-btn">HOME</div></a>
+				<a><div id="randomQuizBtn" class="nav-btn">RANDOM QUIZ</div></a>
+				<a href="about.html"><div class="nav-btn">ABOUT</div></a>
+				<a href="contact.html"><div class="nav-btn">CONTACT</div></a>
 			</div>
 			<div id="main">
 				<div id="tiles">
