linguistics category added

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 					<div class="tile tile-greek-mythology"><p>Greek mythology</p></div>
 					<div class="tile tile-disney"><p>Disney</p></div>
 					<div class="tile tile-sports"><p>Sports</p></div>
+					<div class="tile tile-linguistics"><p>Linguistics</p></div>
 				</div>
 				</div>
 			</div>
